--- a/Customer_Orders/Customer_Orders/Views/Customers/CustomerForm.cshtml
+++ b/Customer_Orders/Customer_Orders/Views/Customers/CustomerForm.cshtml
@@ -15,6 +15,7 @@
         <label asp-for="Email" >Email address</label>
         <input asp-for="Email" type="email" class="form-control">
     </div>
+    <input type="hidden" asp-for="Id" />
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
