--- a/Customer_Orders/Customer_Orders/Views/Orders/OrderForm.cshtml
+++ b/Customer_Orders/Customer_Orders/Views/Orders/OrderForm.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Order Form</h1>
 
-<form asp-action="Save">
+<form asp-action="SaveOrder">
     <div class="form-group">
         <label asp-for="Date">Order Date</label>
         <input asp-for="Date" type="text" class="form-control">
@@ -15,5 +15,6 @@
         <label asp-for="Description">Order Description</label>
         <input asp-for="Description" type="text" class="form-control">
     </div>
+    <input type="hidden" name="customerId" value="@ViewBag.CustomerId" />
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
